--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "install": "^0.12.2",
     "ng": "0.0.0",
+    "ng2-currency-mask": "^5.3.1",
     "primeng": "^4.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
