--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "ng": "0.0.0",
     "ng2-currency-mask": "^5.3.1",
+    "ng2-toasty": "^4.0.3",
     "primeng": "^4.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
